--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="color_fsv_title2">#636363</color>
     <color name="color_fsv_contents">#7a7a7a</color>
     <color name="color_btn_fsv_start_enable">#5999E3</color>
+    <color name="color_btn_fsv_cancel_enable">#FFFFFF</color>
     <color name="color_btn_fsv_start_disable">#B4C6DA</color>
     <color name="color_white">#FFFFFF</color>
 
