--- a/app/src/main/res/layout/fragment_care_child1.xml
+++ b/app/src/main/res/layout/fragment_care_child1.xml
@@ -138,7 +138,8 @@
                     android:id="@+id/child1_stress_report_img_container1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/child1_stress_report_img1"
@@ -168,7 +169,8 @@
                     android:id="@+id/child1_stress_report_img_container2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/child1_stress_report_img2"
@@ -198,7 +200,8 @@
                     android:id="@+id/child1_stress_report_img_container3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/child1_stress_report_img3"
@@ -228,7 +231,8 @@
                     android:id="@+id/child1_stress_report_img_container4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/child1_stress_report_img4"
@@ -258,7 +262,8 @@
                     android:id="@+id/child1_stress_report_img_container5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/child1_stress_report_img5"
