--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -61,8 +61,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frg_me_step2_container"
         android:layout_width="match_parent"
@@ -73,6 +71,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frg_me_step2_app_bar">
+
+
+
 
         <ImageView
             android:id="@+id/frg_me_step2_img1"
@@ -98,8 +99,7 @@
             app:layout_constraintBottom_toTopOf="@id/txt_wait_next_report"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_reason"
-            >
+            app:layout_constraintTop_toBottomOf="@id/txt_reason">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -128,54 +128,55 @@
             android:id="@+id/me_condition2_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/txt_reason"
             android:layout_marginTop="30dp"
             android:orientation="vertical"
-            android:layout_below="@id/txt_reason"
-            app:layout_constraintVertical_weight="1"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_reason"
-            android:visibility="gone">
+            app:layout_constraintVertical_weight="1">
 
             <LinearLayout
                 android:id="@+id/me_condition2_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:paddingVertical="25dp"
                 android:layout_marginHorizontal="14dp"
+                android:gravity="center"
                 android:orientation="horizontal"
-                android:gravity="center">
+                android:paddingVertical="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <RelativeLayout
                     android:id="@+id/me_stress_report_img_container1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/me_stress_report_img1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/mobile"
+                        android:layout_centerInParent="true"
                         android:alpha="0.3"
-                        android:layout_centerInParent="true"/>
+                        android:src="@drawable/mobile" />
 
                     <TextView
                         android:id="@+id/me_stress_report_txt1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_below="@id/me_stress_report_img1"
-                        android:text="휴대폰 사용"
-                        android:textColor="@color/border_btn_gray"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="3dp"
                         android:fontFamily="@font/notosanscjkkrregular"
                         android:includeFontPadding="false"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/my_text_size0"/>
+                        android:text="휴대폰 사용"
+                        android:textColor="@color/border_btn_gray"
+                        android:textSize="@dimen/my_text_size0" />
 
 
                 </RelativeLayout>
@@ -184,28 +185,29 @@
                     android:id="@+id/me_stress_report_img_container2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/me_stress_report_img2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/social"
+                        android:layout_centerInParent="true"
                         android:alpha="0.3"
-                        android:layout_centerInParent="true"/>
+                        android:src="@drawable/social" />
 
                     <TextView
                         android:id="@+id/me_stress_report_txt2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_below="@id/me_stress_report_img2"
-                        android:text="소셜 활동"
-                        android:textColor="@color/border_btn_gray"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="3dp"
                         android:fontFamily="@font/notosanscjkkrregular"
                         android:includeFontPadding="false"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/my_text_size0"/>
+                        android:text="소셜 활동"
+                        android:textColor="@color/border_btn_gray"
+                        android:textSize="@dimen/my_text_size0" />
 
 
                 </RelativeLayout>
@@ -214,28 +216,29 @@
                     android:id="@+id/me_stress_report_img_container3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/me_stress_report_img3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:alpha="0.3"
-                        android:src="@drawable/place"
-                        android:layout_centerInParent="true"/>
+                        android:src="@drawable/place" />
 
                     <TextView
                         android:id="@+id/me_stress_report_txt3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_below="@id/me_stress_report_img3"
-                        android:text="장소 이동"
-                        android:textColor="@color/border_btn_gray"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="3dp"
                         android:fontFamily="@font/notosanscjkkrregular"
                         android:includeFontPadding="false"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/my_text_size0"/>
+                        android:text="장소 이동"
+                        android:textColor="@color/border_btn_gray"
+                        android:textSize="@dimen/my_text_size0" />
 
 
                 </RelativeLayout>
@@ -244,28 +247,29 @@
                     android:id="@+id/me_stress_report_img_container4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/me_stress_report_img4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:alpha="0.3"
-                        android:src="@drawable/physical"
-                        android:layout_centerInParent="true"/>
+                        android:src="@drawable/physical" />
 
                     <TextView
                         android:id="@+id/me_stress_report_txt4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_below="@id/me_stress_report_img4"
-                        android:text="신체 활동"
-                        android:textColor="@color/border_btn_gray"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="3dp"
                         android:fontFamily="@font/notosanscjkkrregular"
                         android:includeFontPadding="false"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/my_text_size0"/>
+                        android:text="신체 활동"
+                        android:textColor="@color/border_btn_gray"
+                        android:textSize="@dimen/my_text_size0" />
 
 
                 </RelativeLayout>
@@ -274,28 +278,29 @@
                     android:id="@+id/me_stress_report_img_container5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="4.5dp">
 
                     <ImageView
                         android:id="@+id/me_stress_report_img5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/sleep"
+                        android:layout_centerInParent="true"
                         android:alpha="0.3"
-                        android:layout_centerInParent="true"/>
+                        android:src="@drawable/sleep" />
 
                     <TextView
                         android:id="@+id/me_stress_report_txt5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_below="@id/me_stress_report_img5"
-                        android:text="수면"
-                        android:textColor="@color/border_btn_gray"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="3dp"
                         android:fontFamily="@font/notosanscjkkrregular"
                         android:includeFontPadding="false"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/my_text_size0"/>
+                        android:text="수면"
+                        android:textColor="@color/border_btn_gray"
+                        android:textSize="@dimen/my_text_size0" />
 
 
                 </RelativeLayout>
@@ -364,7 +369,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stress_reason_container"/>
+            app:layout_constraintTop_toBottomOf="@id/stress_reason_container" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frg_me_date_container"
