--- a/app/src/main/res/layout/fragment_stress_report2.xml
+++ b/app/src/main/res/layout/fragment_stress_report2.xml
@@ -241,7 +241,8 @@
                     android:id="@+id/stress_report_img_container1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/stress_report_img1"
@@ -271,7 +272,8 @@
                     android:id="@+id/stress_report_img_container2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/stress_report_img2"
@@ -301,7 +303,8 @@
                     android:id="@+id/stress_report_img_container3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/stress_report_img3"
@@ -331,7 +334,8 @@
                     android:id="@+id/stress_report_img_container4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/stress_report_img4"
@@ -361,7 +365,8 @@
                     android:id="@+id/stress_report_img_container5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="6dp">
+                    android:layout_marginHorizontal="0dp"
+                    android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/stress_report_img5"
