--- a/app/src/main/res/layout/fragment_stress_report1.xml
+++ b/app/src/main/res/layout/fragment_stress_report1.xml
@@ -94,7 +94,7 @@
             android:layout_marginBottom="3dp"
             android:fontFamily="@font/notosanscjkkrregular"
             android:includeFontPadding="false"
-            android:text="오전 11:00부터 오후 03:00까지의"
+            android:text="test"
             android:textAlignment="center"
             android:textColor="#636363"
             android:textSize="@dimen/fsv_contents_text_size"
@@ -108,7 +108,6 @@
             android:layout_marginTop="3dp"
             android:fontFamily="@font/notosanscjkkrregular"
             android:includeFontPadding="false"
-            android:text="@string/string_stress_report_low"
             android:textAlignment="center"
             android:textSize="@dimen/fsv_contents_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
