--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -73,8 +73,6 @@
         app:layout_constraintTop_toBottomOf="@id/frg_me_step2_app_bar">
 
 
-
-
         <ImageView
             android:id="@+id/frg_me_step2_img1"
             android:layout_width="0dp"
@@ -85,7 +83,69 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.25" />
+            app:layout_constraintWidth_percent="0.25"
+            />
+
+
+
+        <ImageView
+            android:id="@+id/frg_me_step2_img2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/icon_low"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.35"
+            app:layout_constraintTop_toBottomOf="@id/txt_stress_level"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:id="@+id/condition1_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/frg_me_step2_img2"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/condition1_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:text="child1 date"
+                android:textAlignment="center"
+                android:textColor="@color/textColor_default"
+                android:textSize="@dimen/my_text_size1" />
+            <TextView
+                android:id="@+id/condition1_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:text="child1 date"
+                android:textAlignment="center"
+                android:textColor="@color/textColor_default"
+                android:textSize="@dimen/my_text_size1" />
+
+            <TextView
+                android:id="@+id/condition1_stress_level"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:text="child1 stress level"
+                android:textAlignment="center"
+                android:textColor="@color/textColor_default"
+                android:textSize="@dimen/my_text_size3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
 
         <ScrollView
             android:id="@+id/stress_reason_container"
